--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ h1, ul{
 #wrapper {
 	height: 100%; 
 	width: 100%%; 
-	background-color: #E2E9EA;
-	color: #999999;
+	background-color: #FFFBEB;
+	color: #345267;
 	font-family: 'Oswald', serif;
 	letter-spacing: 0em;
   	font-size: 3em;
@@ -24,9 +24,9 @@ h1, ul{
 }
 
 #wrapper a{
-	color: #FF490B;
+	color: #2B1B08;
 	text-decoration: none;
-	border-bottom: 4px solid #FF490B;
+	border-bottom: 6px solid #2B1B08;
 	-webkit-transition: background-color 1.00s ease-in-out;
   	-moz-transition: background-color 1.00s ease-in-out;
   	-o-transition: background-color 1.00s ease-in-out;
@@ -34,21 +34,21 @@ h1, ul{
 }
 
 #wrapper a:hover{
-	background-color: #FF490B;
-	color: #E2E9EA;
-	border-bottom: 2px;
+	background-color: #909CB3 ;
+	color: #FFFBEB;
+	border-bottom: 6px;
 }
 
 #highlight{
-	color: #FF490B;
+	color: #345267;
 }
 
 #footer{
-	font-size: .33em;
+	font-size: .66em;
 }
 
 #footer a{
-	border-bottom: 1px solid #FF490B;
+	border-bottom: 1px solid #2B1B08;
 }
 
 .main--spaced {
@@ -58,7 +58,7 @@ h1, ul{
   width: 100%;
   height: 100%;
   padding: 0em;
-  background-color: #E2E9EA;
+  background-color: #FFFBEB;
   border-radius: 3px;
 }
 
@@ -70,7 +70,7 @@ h1, ul{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #E2E9EA;
+  background-color: #FFFBEB;
 }
 
 .top-item {
